added basic styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,14 @@
     <link rel="stylesheet" href="style.css">
     <title>API Exercises - Bored Bot</title>
 </head>
-<body>
 
+<body>
+    <section>
+        <nav>
+            <h1>Blogspace</h1>
+        </nav>
+    </section>
     <script src="script.js"></script>
 </body>
+
 </html>
