--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
             <h1>Blogspace</h1>
         </nav>
     </section>
-    <div class="form">
-        <label for="text-title">Title</label>
-        <input type="text" name="text-title" id="text-title">
-        <label for="text-area">Post</label>
-        <input type="textarea" name="text-area" id="text-area">
-        <button class="submit-btn">Submit</button>
+    <div class="container">
+        <div class="form">
+            <label for="text-title">Title</label>
+            <input type="text" name="text-title" id="text-title">
+            <label for="text-area">Post</label>
+            <input type="textarea" name="text-area" id="text-area">
+            <button class="submit-btn">Submit</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
