--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
     </section>
     <div class="container">
-        <div class="form">
+        <div>
             <label for="text-title">Title</label>
             <input type="text" name="text-title" id="text-title">
             <label for="text-area">Post</label>
